1.01 One serious bug. After click ok to play new game, some fields are already uncovered.

--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,9 @@
 #flag {
 	-fx-background-image: url("flag.png");
 }
+#clock {
+	-fx-background-image: url("clock1.png");
+}
 #test {
 	-fx-background-color: pink;
 }
